--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hey" 
+<!DOCTYPE html><html><head>
+    <script src="p5.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+
+  </head>
+  <body>
+    <script src="furbyGame.js"></script>
+
+
+</body></html>
