added more files

--- a/yokai/eyes/index.html
+++ b/yokai/eyes/index.html
@@ -42,7 +42,7 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-              <img src="../img/mokumokuren.jpg" width="450px" height=250px;><br><br>
+              <img src="../../img/mokumokuren.jpg" width="450px" height=250px;><br><br>
               <p>The eerie feeling of being watched led to the creation of the Mokumokuren yōkai in Toriyama Sekien's 1781 work "Konjaku hyakki shūi". The original depiction of this yōkai shows many eyes embedded in a ripped and ragged shoji screen (Japanese paper sliding walls) of an abandoned house, though they could also be found in tatami floor mats and in walls. The only way to remove the spirit from the wall is to patch up the holes in it.</p><br>
               <p>Folkloric stories were added by later artists. One provided by Yamada Norio and Mizuki Shigeru: A traveling lumber merchant from Edo spends the night in an abandoned house since he has nowhere else to stay. When the Mokumokuren yōkai makes its appearance, the man is not afraid; on the contrary, he approaches the eyes and plucks them out one-by-one and places them in his bag. He then continues to sell the collected Mokumokuren eyes to an eye doctor in Edo. In another folkloric story, a traveler purposefully stayed in a house where a Mokumokuren yōkai resided and tried to ignore it while sleeping by wrapping his head with a blanket; the next morning the man had found that his eyes had been removed and couldn't be found.</p><br>
               <p>Persistance of this yōkai's concept can be seen with hyper-awareness of surveillance in modern-day society.</p>
@@ -60,13 +60,13 @@
 
     <div class="row">
       <div id="homeDiv" class="col-sm-1">
-        <a href="../index.html"><img id="homeIcon" src="../img/home.svg"></a>
+        <a href="../index.html"><img id="homeIcon" src="../../img/icon/home.svg"></a>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4"></div>
       <div class="col-sm-1"></div>
       <div id="nextDiv" class="col-sm-1">
-        <a href="../rain/index.html"><img id="nextIcon" src="../img/arrow_forward.svg"></a>
+        <a href="../rain/index.html"><img id="nextIcon" src="../../img/icon/arrow_forward.svg"></a>
       </div>
       <div class="col-sm-4"></div>
     </div>
