--- a/yokai/rain/index.html
+++ b/yokai/rain/index.html
@@ -44,7 +44,7 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-              <img id="kasaPic" src="../img/kasabake.jpg" width="200px" height=450px;><br><br>
+              <img id="kasaPic" src="../../img/kasabake.jpg" width="200px" height=450px;><br><br>
               <p>Portrayed as an old-style Japanese umbrella (made of oil paper on bamboo frame) with two arms, one eye, a long tongue, and a single leg in place of a handle. It is seen as a light-hearted and peaceful yōkai.</p><br>
               <p>There are no folkloric tales for this yōkai.</p><br>
             </div>
@@ -61,12 +61,12 @@
 
     <div class="row">
       <div id="homeDiv" class="col-sm-1">
-        <a href="../index.html"><img id="homeIcon" src="../img/home.svg"></a>
+        <a href="../index.html"><img id="homeIcon" src="../../img/icon/home.svg"></a>
       </div>
       <div class="col-sm-1"></div>
       <div class="col-sm-4"></div>
       <div id="prevDiv" class="col-sm-1">
-        <a href="../eyes/index.html"><img id="prevIcon" src="../img/arrow_back.svg"></a>
+        <a href="../eyes/index.html"><img id="prevIcon" src="../../img/icon/arrow_back.svg"></a>
       </div>
       <!-- <div id="nextDiv" class="col-sm-1">
         <a href="../maze/index.html"><img id="nextIcon" src="../img/arrow_forward.svg"></a>
