--- a/yokai/index.html
+++ b/yokai/index.html
@@ -28,28 +28,28 @@
       <div class="col carousel slide" data-ride="carousel" data-interval="7500">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="carImg" src="img/nukaribe.jpg" alt="Nukaribe yokai">
+            <img class="carImg" src="../img/nukaribe.jpg" alt="Nukaribe yokai">
             <div class="carousel-caption">
               <h4>Nurikabe (ぬりかべ) from "Bakemono no e" (化物之繪, c. 1700)</h4>
               <p>Yōkai whose name translates to "plaster wall", manifests as an invisible wall that halts or misdirects travelers walking at night</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="carImg" src="img/futakuchionna.jpg" alt="Futakuchi Onna yokai">
+            <img class="carImg" src="../img/futakuchionna.jpg" alt="Futakuchi Onna yokai">
             <div class="carousel-caption">
               <h4>Futakuchi onna (二口女) from "yokai.com"</h4>
               <p>Yōkai whose name translates to "two-mouthed woman", normal-passing woman who has a second mouth in the back of her skull whose ravenous nature consumes any food it can find.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="carImg" src="img/yokaiwatch.jpg" alt="Yokai Watch">
+            <img class="carImg" src="../img/yokaiwatch.jpg" alt="Yokai Watch">
             <div class="carousel-caption">
               <h4>"Yokai Watch (妖怪ウォッチ)" anime</h4>
               <p>Theme of befriending various yokai haunting the city.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="carImg" src="img/hanakosan.jpg" alt="地縛少年花子くん, Toilet-Bound Hanako-kun anime adaptation based off of the Hanako yokai">
+            <img class="carImg" src="../img/hanakosan.jpg" alt="地縛少年花子くん, Toilet-Bound Hanako-kun anime adaptation based off of the Hanako yokai">
             <div class="carousel-caption">
               <h4>Toilet-Bound Hanako-kun (地縛少年花子くん, Jibaku Shōnen Hanako-kun)</h4>
               <p>A twist on the traditional Hanako-san yokai (Toire no Hanako-san), a Japanese urban legend about the spirit of a young girl named Hanako-san who haunts school bathrooms.</p>
