--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul class="landingList">
         <li>
           <a href="#" title="About Briana Mendoza:" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="Current 4th year at UChicago majoring in East Asian Languages and Civilizations and minoring in Media Arts and Design. Welcome to my portfolio site!"><img src="img/icon/face-24px.svg" alt="face icon" class="landingIcons"></a>
-          <a href="about" class="newPage about">Briana</a>
+          <a href="https://blmendoza.github.io/about/index" class="newPage about">Briana</a>
         </li>
         <li>
           <a href="#" title="Schedule Simulator" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="A project made for my Embodied Data and Gamified Interfaces class using P5.js."><img src="img/icon/date_range-24px.svg" alt="calendar icon" class="landingIcons"></a>
