--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css?family=Geo|Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster|Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Briana's Space</title>
   </head>
 
@@ -60,9 +62,8 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-8">
           <h2 id="japanese">はじめまして。ブリアナと申します。よろしくお願いします。</h2>
-          <h3>☺☻ My name is Briana, and welcome to my website ☻☺</h3><br>
           <div id="box3"></div><br>
-          <p id="intro">I'm currently a 4th year at UChicago, and this is my space, the final frontier of public knowledge on my work. As a Chicago native, I pride myself on my savvy street smarts when taking the CTA and knowing to prepare for the weather changing at the drop of a hat.</p><br>
+          <p id="intro">I'm currently an undergrad in mechanical engineer at the University of Illinois at Chicago. Welcome to my space, the final frontier of public knowledge on my work.</p><br>
           <p id="webInfo">Here you will find some projects I've worked on, both in school and as a hobby.</p>
         </div>
         <div class="col-sm-1"></div>
