--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <ul class="landingList">
         <li>
-          <a href="#" title="About Briana Mendoza:" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="Current 4th year at UChicago majoring in East Asian Languages and Civilizations and minoring in Media Arts and Design. Welcome to my portfolio site!"><img src="img/icon/face-24px.svg" alt="face icon" class="landingIcons"></a>
+          <a href="#" title="About Briana Mendoza:" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="occupation: mechanical engineer undergrad at UIC"><img src="img/icon/face-24px.svg" alt="face icon" class="landingIcons"></a>
           <a href="https://blmendoza.github.io/about/index" class="newPage about">Briana</a>
         </li>
         <li>
