--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 
 
   <body>
+
     <div class="container-fluid">
+
       <h1 id="landingHeading">Welcome</h1>
 
       <ul class="landingList">
         <li>
-          <a href="#" title="About Briana Mendoza:" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="occupation: mechanical engineer undergrad at UIC"><img src="img/icon/face-24px.svg" alt="face icon" class="landingIcons"></a>
-          <a href="https://blmendoza.github.io/about/index" class="newPage about">Briana</a>
+          <a href="#" title="Who am I?" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="Briana Mendoza, engineering student, lover of tech"><img src="img/icon/face-24px.svg" alt="face icon" class="landingIcons"></a>
+          <a href="about" class="newPage about">Briana</a>
         </li>
         <li>
           <a href="#" title="Schedule Simulator" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="A project made for my Embodied Data and Gamified Interfaces class using P5.js."><img src="img/icon/date_range-24px.svg" alt="calendar icon" class="landingIcons"></a>
